apps/users/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: users
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: users
    spec:
      containers:
        - image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
          resources:
            requests:
              memory: "5Mi"
              cpu: "100m"
            limits:
              memory: "10Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 1
          name: users
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
