apps/users/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/preserve-host: "false"
    konghq.com/plugins: prometheus
spec:
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 8080
